@@ -534,6 +534,10 @@
 	into is_constant (bool) and initial_value (PSyIR Node). This allows
 	parsing Fortran declarations with initial_value that are not constant.
 
+	181) PR #2231 for #2213. The Fortran frontend and backend now also
+	consider that UnresolvedInterface symbols can come from the body of
+	a Fortran Interface.
+
 release 2.3.1 17th of June 2022
 
 	1) PR #1747 for #1720. Adds support for If blocks to PSyAD.
